--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,26 +1,31 @@
 {
-  "compilerOptions": {
-      "target": "es2017",
-      "module": "es2015",
-      "moduleResolution": "node",
-      "lib": [
-          "es2017",
-          "dom",
-          "dom.iterable"
-      ],
-      "declaration": true,
-      "sourceMap": true,
-      "inlineSources": true,
-      "experimentalDecorators": true,
-      "skipLibCheck": true,
-      "noUnusedLocals": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitAny": false,
-      "outDir": "./dist",
-      "composite": true,
-      "importHelpers": true
-  },
-  "include": [
-      "**/*.ts"
-  ]
+    "compilerOptions": {
+        "module": "esnext",
+        "target": "ES2017",
+        "lib": [
+            "es2017",
+            "dom",
+            "dom.iterable"
+        ],
+        "declaration": true,
+        "emitDeclarationOnly": true,
+        "outDir": "./types",
+        "strict": true,
+        "noUnusedLocals": false,
+        "skipLibCheck": true,
+        "noUnusedParameters": false,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true
+    },
+    "include": [
+        "**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "types",
+    ]
 }
